name:                cis194
version:             0.1.0.0
synopsis:            homework solutions and such for CIS 194
description:         Please see README.md
homepage:            https://github.com/lgdean/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              L Dean
maintainer:          example@example.com
copyright:           2016 L Dean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable cis194
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
